--- a/percel/templates/percel/index.html
+++ b/percel/templates/percel/index.html
@@ -1,5 +1,5 @@
 <h1>Home page</h1>
-<h1><a href=#>Admin Login</a></h1>
+<h1><a href="{% url 'percel:login' %}">Admin Login</a></h1>
 
 <h2>{{ note }}</h2>
 
