order page created

--- a/percel/templates/registration/login.html
+++ b/percel/templates/registration/login.html
@@ -7,5 +7,5 @@
     {{ form.as_p }}
 
     <button name="submit">Log in</button>
-    <input type="hidden" name="next" value="{% url 'percel:index' %}" />
+    <input type="hidden" name="next" value="{% url 'percel:order' %}" />
 </form>
