--- a/percel/templates/percel/invoice.html
+++ b/percel/templates/percel/invoice.html
@@ -1,10 +1,21 @@
-<h1>Invoice</h1>
+{% extends "percel/base.html" %}
+{% load bootstrap4 %}
 
-{{name}}
-{{product}}
-{{weight}}
-{{destinations}}
-{{prod_type}}
-{{price}}
+{% block content %}
 
-<a href="{% url 'percel:order' %}">Back</a>
+<div class="container">
+    <h1>Invoice</h1>
+
+    <h3>Merchant's Name : <b>{{name}}</b></h3>
+    <h3>Product Items : <b>{{product}}</b></h3>
+    <h3>Product Total Weight : <b>{{weight}}</b></h3>
+    <h3>Percle Destination : <b>{{destinations}}</b></h3>
+    <h3>Product Type : <b>{{prod_type}}</b></h3>
+    <h3>Cost : <b>{{price}}Tk.</b></h3>
+
+</div>
+
+
+<a href="{% url 'percel:order' %}" class="text-white btn btn-primary">Back</a>
+
+{% endblock content %}
