spelling changed of parcel

--- a/percel/templates/percel/invoice.html
+++ b/percel/templates/percel/invoice.html
@@ -9,7 +9,7 @@
     <h3>Merchant's Name : <b>{{name}}</b></h3>
     <h3>Product Items : <b>{{product}}</b></h3>
     <h3>Product Total Weight : <b>{{weight}}</b></h3>
-    <h3>Percle Destination : <b>{{destinations}}</b></h3>
+    <h3>Parcle Destination : <b>{{destinations}}</b></h3>
     <h3>Product Type : <b>{{prod_type}}</b></h3>
     <h3>Cost : <b>{{price}}Tk.</b></h3>
 
